@@ -626,6 +626,18 @@ large enough to bring mounts into</td>
 large enough to bring mounts into</td>
     </tr>
     <tr>
+      <td>LongRoad</td>
+      <td>the open road, cost more move</td>
+    </tr>
+    <tr>
+      <td>LongerRoad</td>
+      <td>the open road, cost more move</td>
+    </tr>
+    <tr>
+      <td>LongestRoad</td>
+      <td>the open road, cost most move</td>
+    </tr>
+    <tr>
       <td>MagicFreeRoom</td>
       <td>an indoor, stone place
 where magic always fails</td>
